--- a/index.html
+++ b/index.html
@@ -99,7 +99,45 @@
 
 <br>
 
-  
+
+<img class="fondo" src="./imagenes/FONDO.jpg" alt="">
+<img class="fondo2" src="./imagenes/FONDO.jpg" alt="">
+
+<h1 class="Frase_inicio">Existen momentos en la vida que <br> imaginamos, soñamos y 
+  esperamos, <br> uno de esos momentos ha llegado.</h1>
+  <img class="mari_azul" src="./imagenes/azul.gif" alt="">
+
+   <p class="parrafo1"><b>La fiesta</b></p>
+   <img class="copas" src="./imagenes/COPAS.png" alt="">  
+
+
+<hr class="linea">
+
+<p class="parrafo2"><b>Horario:</b> 21:00 Hs <br> <b>Salon:</b> Salón Oballes </p>
+
+
+<div class="contenedor-mapa">
+ <button class="clik" id="btn">como llegar</button>
+</div>
+
+
+
+
+
+
+<hr class="linea2">
+
+<p class="parrafo3"> Me llenaría de mucha alegría <br>que pudieras acompañarme en <br>este día.</p>
+
+<a href="https://wa.me/+5492616602946" target="_blank">
+  <img class="whatsap" src="./imagenes/whatsapp.png" alt="">
+</a>
+
+<img class="gifmariposa" src="./imagenes/2.gif" alt="">
+<p class="parrafo4">Confirmá tu asistencia <br> haciendo click en el icono.</p>
+
+
+
 
 
 
