--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 <img class="gifmariposa" src="./imagenes/2.gif" alt="">
 <p class="parrafo4">Confirmá tu asistencia <br> haciendo click en el icono.</p>
-
+<p class="parrafo03">Tiempo de confirmar <br>hasta el 27 de marzo.</p>
 
 <hr class="linea2">
 
