--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@ algún regalo podes hacerlo <br> dando click en el botón. </p>
 <div class="collapse" id="collapseExample">
  <div class="card card-body">
    <p class="parrafoD">
+    Banco Nación <br>TITULAR: Damián Abel Leucrini <br> ALIAS: LLAVE.TRANVI.PLAN <br>
      CBU: 0110333330033314100015
+<br>
 <br>
      ¡Empezó la cuenta regresiva!🤍
  </div>
