--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <hr class="linea">
 
-<p class="parrafo2"><b>Horario:</b> 21:00 Hs <br> <b>Salon:</b> Salón Oballes </p>
+<p class="parrafo2"><b>Horario:</b> 21:00 Hs <br> <b>Salon:</b> Oballes </p>
 
 
 <div class="contenedor-mapa">
@@ -199,6 +199,9 @@ algún regalo podes hacerlo <br> dando click en el botón. </p>
      ¡Empezó la cuenta regresiva!🤍
  </div>
 </div>
+
+<p class="parrafo5"><b>Vestimenta</b></p>
+<p class="parrafo03">Formal</p>
 
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
