--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 <p class="parrafo3"> Me llenaría de mucha alegría <br>que pudieras acompañarme en <br>este día.</p>
 
-<a href="https://wa.me/+5492616602946" target="_blank">
+<a href="https://wa.me/+549" target="_blank">
   <img class="whatsap" src="./imagenes/whatsapp.png" alt="">
 </a>
 
@@ -193,7 +193,7 @@ algún regalo podes hacerlo <br> dando click en el botón. </p>
  <div class="card card-body">
    <p class="parrafoD">
     Banco Nación <br>TITULAR: Damián Abel Leucrini <br> ALIAS: LLAVE.TRANVI.PLAN <br>
-     CBU: 0110333330033314100015
+     CBU: 01103333300333140015
 <br>
 <br>
      ¡Empezó la cuenta regresiva!🤍
